# Order-Matching-Engine-Rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  adr.md  architecture.md  interfaces.md  plan.md  prompt.md
crates/core/: Cargo.toml
crates/core/benches/: matcher_bench.rs
crates/core/proptest-regressions/: matcher.txt
crates/core/src/: book.rs  events.rs  lib.rs  matcher.rs  order.rs  price_level.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: egress.rs  lib.rs  ring.rs  sequencer.rs  shard.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  router.rs  session.rs  tcp.rs
crates/loadgen/: Cargo.toml
crates/loadgen/src/: main.rs
crates/marketdata/: Cargo.toml
crates/marketdata/src/: bus.rs  lib.rs  publisher.rs  snapshot_builder.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: histogram.rs  lib.rs  registry.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: binary.rs  error.rs  json_codec.rs  lib.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs  reader.rs  record.rs  segment.rs  snapshot.rs  writer.rs
crates/wal/tests/: crash_recovery.rs
deploy/: docker-compose.yml
deploy/grafana/provisioning/dashboards/: exchange.json  provider.yml
deploy/prometheus/: prometheus.yml
ml/: anomaly.py  feed_consumer.py  midprice_model.py  requirements.txt  sidecar.py
web/: index.html
