[package]
name    = "exchange-core"
version.workspace = true
edition.workspace = true

[dependencies]
rustc-hash = { workspace = true }
slab       = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "matcher_bench"
harness = false
