[package]
name    = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
exchange-core = { path = "../core" }
engine            = { path = "../engine" }
wal               = { path = "../wal" }
marketdata        = { path = "../marketdata" }
protocol          = { path = "../protocol" }
exchange-metrics = { path = "../metrics" }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures           = { workspace = true }
bytes             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
