[package]
name    = "marketdata"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-core = { path = "../core" }
protocol          = { path = "../protocol" }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
