[package]
name    = "wal"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-core = { path = "../core" }
protocol   = { path = "../protocol" }
crc32fast  = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }

[dev-dependencies]
tempfile = "3"
